--- a/src/app/modules/order/order.component.html
+++ b/src/app/modules/order/order.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="cont-home">
-        <h1>Pedidos</h1>
+        <h1>Pedidos/Extratos</h1>
 
         <table class="table">
             <thead class="thead-dark">
