--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,26 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand">Dotz</a>
+    <div class="container cont-resp">
+        <div class="logo"><img src="../../../../assets/images/dotz2.png" routerLink="/home"></div>
 
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/order">Pedidos</a>
-                </li>
-            </ul>
-        </div>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/order">Pedidos/Extrato</a>
+            </li>
+        </ul>
 
         <div class="d-flex">
             <div class="content-saldo">
-                <div>Pontos</div>
                 <span>{{authService.currentUser?.pontos}}</span>
+                <div>Pontos</div>
             </div>
 
             <div class="content-user">
-                <!-- <i class="fas fa-user"></i> -->
                 <div>Olá, {{authService.currentUser?.name}}</div>
                 <i class="fas fa-power-off" (click)="authService.logout()"></i>
             </div>
