--- a/src/app/modules/auth/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/sign-up/sign-up.component.html
@@ -21,7 +21,7 @@
                         <input type="password" class="form-control" placeholder="Repita sua senha" formControlName="senhaConfirmacao" />
                     </div>
                     <div class="form-group terms">
-                        <input type="checkbox" class="form-check-input" formControlName="acceptTerms" id="acceptTerms" />
+                        <input type="checkbox" formControlName="acceptTerms" id="acceptTerms" />
                         <label for="acceptTerms">
                             <span><span></span></span>Eu concordo com os <a class="term-service"> Termos de Serviço</a>
                         </label>
