--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -5,7 +5,8 @@
         <div class="d-flex flex-wrap content-products">
             <div *ngFor="let product of listProducts" class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">{{product.title}} <span>{{product.price}}</span></h5>
+                    <h5 class="card-title">{{product.title}} <div>{{product.price}} <span>pontos</span></div>
+                    </h5>
                     <p class="card-text">{{product.description}}</p>
                     <a class="btn btn-success" (click)="selectProduct(product, template)">Resgatar</a>
                 </div>
