--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -14,6 +14,10 @@
             .card-title {
                 display: flex;
                 justify-content: space-between;
+
+                span {
+                    font-size: 12px;
+                }
             }
         }
     }
@@ -34,6 +38,18 @@
             span {
                 font-weight: bold;
             }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .cont-home {
+        h1 {
+            text-align: center;
+        }
+
+        .content-products {
+            justify-content: center;
         }
     }
 }
