--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -59,6 +59,12 @@
             display: flex;
             justify-content: space-between;
 
+            &:nth-child(1) {
+                border-bottom: 1px solid #ccc;
+                padding-bottom: 10px;
+                margin-bottom: 10px;
+            }
+
             span {
                 font-weight: bold;
             }
