--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-body">
+<div class="container-body {{fixHeight}}">
     <app-header *ngIf="!isLogin"></app-header>
     <router-outlet></router-outlet>
 </div>
