--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -15,6 +15,7 @@
             </div>
 
             <div class="content-user">
+                <!-- <i class="fas fa-user"></i> -->
                 <div>Olá, {{authService.currentUser?.name}}</div>
                 <i class="fas fa-power-off" (click)="authService.logout()"></i>
             </div>
