--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -27,6 +27,10 @@
         cursor: pointer;
         font-size: 14px;
         color: red;
+
+        &:first-child {
+            color: #001f53;
+        }
     }
 }
 
