--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -69,6 +69,21 @@
                 font-weight: bold;
             }
         }
+
+        .listAddress {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 0px;
+
+            input {
+                margin-left: 30px;
+            }
+
+            span {
+                font-weight: bold;
+            }
+        }
     }
 }
 
