--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -11,8 +11,8 @@
         font-weight: bold;
         margin-right: 10px;
         border: 2px solid red;
-        border-radius: 30px;
-        padding: 2px;
+        border-radius: 53px;
+        padding: 0px 3px;
         color: red;
         font-size: 14px;
     }
